# synapse

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
examples/: basic_usage.py  multi_agent_example.py  xrp_client.py
scripts/: publish.sh
src/synapse_protocol/: __init__.py  app.py  protocol.py
src/synapse_protocol/agents/: agent_manager.py  crew_manager.py
src/synapse_protocol/api/: routes.py
src/synapse_protocol/payments/: __init__.py  core.py  exceptions.py  models.py  types.py  xrp_bridge.py
src/synapse_protocol/websocket/: __init__.py  handler.py  manager.py
