[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synapse-protocol"
version = "0.1.0"
description = "A2A payment protocol with XRP integration and multi-agent system"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Synapse Protocol Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "flask>=2.0.0",
    "flask-cors>=4.0.0",
    "flask-socketio>=5.0.0",
    "python-socketio>=5.0.0",
    "python-engineio>=4.0.0",
    "simple-websocket>=0.10.0",
    "requests>=2.28.0",
    "python-dotenv>=0.19.0",
    "crewai>=0.1.0",
    "openai>=1.0.0",
    "langchain-openai>=0.0.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "gunicorn>=21.0.0",
    "eventlet>=0.33.0",
    "websockets>=10.0"
]

[project.urls]
"Homepage" = "https://github.com/synapseprotocol/synapse-protocol"
"Bug Tracker" = "https://github.com/synapseprotocol/synapse-protocol/issues"
"Documentation" = "https://synapseprotocol.com/docs"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
    "mypy>=0.900",
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 